--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                   </div>
 
                   <div class="col-lg-12">
-                    <div class="loading">Loading</div>
+                    <div class="loading">Please send a direct email to Gianluca.posca11@gmail.com</div>
                     <div class="error-message"></div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
