--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
                   <div class="col-lg-12">
                     <div class="loading">Please send a direct email to Gianluca.posca11@gmail.com</div>
-                    <div class="error-message"></div>
+                    <div class="error-message">Please send a direct email to Gianluca.posca11@gmail.com</div>
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
 
