--- a/index.html
+++ b/index.html
@@ -452,8 +452,8 @@
                     <div class="sent-message">Your message has been sent. Thank you!</div>
                   </div>
 
-                  <div class="mt-0">
-                    <input class="btn btn-defeault btn-send" value="Please send a direct email to Gianluca.posca11@gmail.com">
+                  <div class="mt-0" style="text-align: center;">
+                    <p class="btn btn-defeault btn-send">Please send a direct email to Gianluca.posca11@gmail.com</p>
                   </div>
 
                 </div>
