--- a/index.html
+++ b/index.html
@@ -103,8 +103,16 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
+                <span>Flutter Developer</span>
+                <p class="separator">I Develop Apps for All platforms, from iOS to Andoird, Web, Windows and more... with a great Design!</p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="services-block">
+                <i class="bi bi-binoculars"></i>
                 <span>iOS Developer</span>
-                <p class="separator">I Develop Apps for All Apple platforms, from iOS to watches and Mac, with a great Design</p>
+                <p class="separator">I Develop Apps for All Apple platforms, from iOS to watches and Mac!</p>
               </div>
             </div><!-- End testimonial item -->
 
@@ -201,14 +209,13 @@
         <div class="row">
           <div class="row">
             <div class="col-sm">
-              <h3>Business School</h3>
+              <h3>Computer Science</h3>
               <br>
               <ul>
                 <li>ITIS VICO - Varese, 07/2019</li>
-                <li>Degree in Administration, Finance and Marketing 86/100</li>
-                <li>It is the general path, characterized mainly by the study of legal and economic disciplines, such as law, business and political economics, and foreign languages. The profile provides the student with skills in the financial
-                  field,
-                  in civil and fiscal legislation, in business systems and processes, in marketing tools, in insurance-financial products and in the social economy.</li>
+                <li>Degree in AComputer Science 86/100</li>
+                <li>It is the general path, characterized mainly by the study of Computer and Software disciplines, such as Web, Mobile and foreign languages. The profile provides the student with skills in the computer
+                  field.</li>
               </ul>
             </div>
             <div class="col-sm">
@@ -246,6 +253,18 @@
         </div>
 
         <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/img-apps/BLM.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>BLM Token</h4>
+              <p>Decentralized Token built for CryptoCurrency</p>
+              <a href="assets/img/img-apps/BLM.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="A unique Rugpull-Proof coin moulded by the community, looking to benefit the lives of Black people in the worst situations."><i
+                  class="bx bx-plus"></i></a>
+              <a href="https://gianlucap17.github.io/BLM" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/img-apps/Schermata 2021-06-19 alle 13.42.06.png" class="img-fluid" alt="">
