--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <h3>Skills</h3>
             <br>
             <ul>
-              <li>Developer: Swift, Obj-C, Python, Java, Html, Css, Bootstrap, Javascript, Api rest, Git, Unix, JQuery, Angular JS, MySql, MongoDB, NodeJS, ExpressJS, Mongoose, React.JS</li>
+              <li>Developer: Flutter, Swift, Obj-C, Python, Java, Html, Css, Bootstrap, Javascript, Api rest, Git, Unix, JQuery, Angular JS, MySql, MongoDB, NodeJS, ExpressJS, Mongoose, React.JS</li>
               <li>Software: Graphic Design Softwares, Blockchain Development </li>
               <li>English, Italian, Spain, French</li>
               <li>Business Managment</li>
