--- a/index.html
+++ b/index.html
@@ -267,6 +267,18 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <img src="assets/img/img-apps/tindog.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TinDog</h4>
+              <p>TinDog, Tinder for dogs.</p>
+              <a href="assets/img/img-apps/tindog.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link"
+                title="TinDog, Tinder for dogs. Meet new and interesting dogs nearby."><i
+                  class="bx bx-plus"></i></a>
+              <a href="https://gianlucap17.github.io/TinDog" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <img src="assets/img/img-apps/Schermata 2021-06-19 alle 13.42.06.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Mobills - Budget Planner Free</h4>
