--- a/index.html
+++ b/index.html
@@ -318,6 +318,26 @@
                   </div>
                 </div>
 
+                <div class="col-md-6 col-lg-4" >
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/africa-explore/id1585613181?mt=12
+                    ">
+                      <img src="
+                      assets/img/img-apps/africa.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Africa - Explore!
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            Africa display the widest variety in size and structure of any of the continents.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
                 <div class="col-md-6 col-lg-4">
                   <div style="margin: 1rem;" class="card border-0 transform-on-hover">
                     <a class="lightbox" href="
@@ -577,6 +597,168 @@
                       </div>
                   </div>
                 </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://play.google.com/store/apps/details?id=com.gianlucapo.bmicalculator
+                    ">
+                      <img src="
+                      assets/img/img-apps/bmicalculator.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            BMI Calculator - Flutter
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            The Body Mass Index (BMI) Calculator can be used to calculate BMI value
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://play.google.com/store/apps/details?id=com.gianlucapo.Dicee
+                    ">
+                      <img src="
+                      assets/img/img-apps/diceeApp.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Dicee - Flutter
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            Roll it! Tired of losing your dice?
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://play.google.com/store/apps/details?id=com.gianlucapo.bitcoinTracker
+                    ">
+                      <img src="
+                      assets/img/img-apps/btctracker.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Bitcoin Tracker - Flutter
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            A cryptocurrency is an encrypted data string that denotes a unit of currency.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/xylophone-play-it/id1585641980#?platform=iphone
+                    ">
+                      <img src="
+                      assets/img/img-apps/Xylophone.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Xylophone - Play it!
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            Enjoy a virtual musical instrument!
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/bmi-calculator-swift/id1585627158
+                    ">
+                      <img src="
+                      assets/img/img-apps/bmiios.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            BMI Calculator
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            Body Mass Index is a simple calculation using a person’s height and weight. 
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/clima-discover-it/id1585629480
+                    ">
+                      <img src="
+                      assets/img/img-apps/climaios.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Clima - Discover it!
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            With Clima you'll be able to find out about the weather forecast and related information wherever you are.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/tipsy-split-it/id1585640415
+                    ">
+                      <img src="
+                      assets/img/img-apps/tipsy.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Tipsy - Split it!
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            Spitly is the easiest way to share expenses with friends and family and stop stressing about “who owes who."
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4">
+                  <div style="margin: 1rem;" class="card border-0 transform-on-hover">
+                    <a class="lightbox" href="
+                    https://apps.apple.com/it/app/quizzler-guess-it/id1585641176
+                    ">
+                      <img src="
+                      assets/img/img-apps/quizios.png
+                      " alt="Card Image" class="card-img-top">
+                    </a>
+                      <div class="card-body">
+                          <h6><a href="#">
+                            Quizzler - Guess it!
+                          </a></h6>
+                          <p class="text-muted card-text">
+                            A free online quiz builder to help you spice up your remote social gatherings.
+                          </p>
+                      </div>
+                  </div>
+                </div>
+
+
 
 
               </div>
