--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           <li><a href="https://www.facebook.com/gianluca.posca.77/" class="bi bi-facebook"></a></li>
           <li><a href="https://www.instagram.com/gianluca_posca/" class="bi bi-instagram"></a></li>
           <li><a href="https://www.linkedin.com/in/gianluca-posca-233868123" class="bi bi-linkedin"></a></li>
+          <li><a href="https://github.com/GianlucaP17" class="bi bi-github"></a></li>
         </ul>
       </div>
     </div>
